src/assets/styles/components/button.css
.button {
    box-sizing: border-box;
    display: block;
    width: 100%;
    height: 48px;
    padding-left: 24px;
    padding-right: 24px;
    cursor: pointer;
    font-family: inherit;
}

.button--primary {
    border: none;
    background-color: var(--color-red);
}

.button--secondary {
    border: 1px solid #FFC9C9;
    background-color: var(--color-light-red);
}

.button--half {
    width: calc(50% - 12px);
}

.button__label {
    box-sizing: border-box;
    font-family: inherit;
    font-size: 12px;
    font-weight: 700;
    color: var(--color-dark-text);
    text-transform: uppercase;
    letter-spacing: 1px;
}

.button--primary > .button__label {
    color: var(--color-dark-text);
}

.button--secondary > .button__label {
    color: var(--color-red);
}

